--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,20 +1,23 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    driverClassName: org.postgresql.Driver
-    username: postgres
-    password: postgres
 
-  hikari:
-    connectionTimeout: 20000
-    maximumPoolSize: 5
+  datasource:
+    driverClassName: org.postgresql.Driver
+    url: ${env.DATABASE_URL:jdbc:postgresql://localhost:5432/survey-service}
+    username: ${env.DATABASE_USERNAME:survey-service-app}
+    password: ${env.DATABASE_PASSWORD:survey-service-app}
+
+    hikari:
+      connectionTimeout: 20000
+      maximumPoolSize: 5
 
   jpa:
-    open-in-view: true
-    generate-ddl: true
+    open-in-view: false
+    generate-ddl: false
     show-sql: true
+
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         temp:
           use_jdbc_metadata_defaults: false
 
