--- a/pom.xml
+++ b/pom.xml
@@ -85,8 +85,21 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>1.6.1</version>
+				<configuration>
+					<from>
+						<image>openjdk:11-jdk-slim</image>
+					</from>
+					<container>
+						<ports>
+							<port>8080</port>
+							<port>8081</port>
+							<port>5432</port>
+						</ports>
+					</container>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
