Fix service logic and add user answers

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 8083
+
 spring:
 
   datasource:
@@ -23,3 +26,7 @@ spring:
 
     hibernate:
       ddl-auto: update
+
+services:
+  user:
+    url: http://localhost:8080
