--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,37 +9,35 @@ jobs:
     steps:
       - checkout
 
-      # setup testing env
-      - setup_remote_docker:
-          docker_layer_caching: true
       - run:
           name: Login to DockerHub
           command: docker login -u $DOCKER_USER -p $DOCKER_PASS
 
-      # Next Sprint stuff
-      #      - run:
-      #          name: Decrpyt Secrets
-      #          command: openssl enc -d -aes-256-ecb -md md5 -in src/main/resources/application-prod.properties.secrets -out src/main/resources/application-prod.properties -k $SECRETS_KEY
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - sample-springboot-api-{{ checksum "pom.xml" }}
+            - survey-service-{{ checksum "pom.xml" }}
 
       - run: mvn dependency:go-offline
 
       - save_cache:
           paths:
             - ~/.m2
-          key: sample-springboot-api-{{ checksum "pom.xml" }}
+          key: survey-service-{{ checksum "pom.xml" }}
 
       # package into a jar
       - run: mvn clean package
 
+      # prepare maven release
+      - run: mvn release:prepare
+
+      # Perform release
+      - run: mvn release:perform
+
       # build and push docker image to docker hub
-      - run: mvn clean compile jib:build -Dimage=betinnapp/survey-service:$CIRCLE_BUILD_NUM
+      - run: mvn clean compile jib:build
 
       # store raw contents of src code
       - store_artifacts:
           path: target/classes
-          destination: sample-springboot-api
+          destination: survey-service
