--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run: mvn clean package
 
       # prepare maven release
-      - run: mvn release:prepare
+      - run: mvn -B -Dresume=false -DdryRun=true release:prepare
 
       # Perform release
       - run: mvn release:perform
