--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run: mvn -B -Dresume=false -DdryRun=true release:prepare
 
       # Perform release
-      - run: mvn release:perform
+      - run: mvn -Dmaven.deploy.skip=true release:perform
 
       # build and push docker image to docker hub
       - run: mvn clean compile jib:build
