--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run: mvn clean package
 
       # prepare maven release
-      - run: mvn -B -Dresume=false -DdryRun=true release:prepare
+      - run: mvn -B -Dresume=false release:prepare
 
       # Perform release
       - run: mvn -Dmaven.deploy.skip=true release:perform
