--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,13 @@ jobs:
       # prepare maven release
       - run: mvn -B -Dresume=false release:prepare
 
+      # Configure git
+      - git:
+          - name: Configure Git
+          - command: |
+              git config user.name "CI"
+              git config user.email "noreply@betinnapp.com"
+
       # Perform release
       - run: mvn -Dmaven.deploy.skip=true release:perform
 
