--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run: mvn -B -Dresume=false release:prepare
 
       # Perform release
-      - run: mvn -Dmaven.deploy.skip=true -DscmCommentPrefix=[ci skip] release:perform
+      - run: mvn -Dmaven.deploy.skip=true -DscmCommentPrefix="[ci skip]" release:perform
 
       # build and push docker image to docker hub
       - run: mvn -Djib.to.auth.username=$DOCKER_USER -Djib.to.auth.password=$DOCKER_PASS clean compile jib:build
